# bioseq-learning

./: .gitignore  DESCRIPTION.md  README.md  data.dvc  makefile  models.dvc  pyproject.toml
.dvc/: config
data/: .gitignore
docs/: DESCRIPTION.md  IDEAS.md  REPORT.md  rpsbproc_help.txt  rpsbproc_readme.txt
logs/: process_genomes.txt
notebooks/: .gitignore  conserved_domain_alignment.ipynb  conserved_domain_search.ipynb  conserved_domain_visualization.ipynb  genome_parsing.ipynb  genome_parsing.py  genome_processing.ipynb
notebooks/conserved_domain_search_examples/: ENSMUST00000134663.fasta  Q99MZ6.fasta
notebooks/genome_parsing_examples/: README.md
scripts/: align_conserved_domains.sh  conserved_domain_alignment.py  conserved_domain_visualization.py  download_cdd.sh  download_conservative_domain_db.sh  download_ncbi_taxonomy.sh  download_patric_genomes.py  process_genomes.sh  process_patric_bacteria_faa_genomes.sh  process_patric_e_coli_fna_genomes.sh  process_patric_fna_genomes.py  process_patric_ref_n_rep_bacteria_faa_genomes.sh  visualize_genomes.py  visualize_reference_or_representative_bacteria.py
src/: __init__.py  baseline_masked_genome_model.py  download.sh  download_cdd.py
src/configs/: baseline_masked_genome_model_config.py  baseline_masked_genome_model_config.yml  baseline_masked_genome_model_search_space.json
src/datasets/: __init__.py  align_conserved_domains.py  basic_masked_genome_dataset.py  conserved_domain_alignment.py  conserved_domain_search.py  conserved_domain_visualization.py  create_genome_example.py  download_cdd.sh  download_patric_genomes.py  genome_contig_dataset_with_annotation.py  genome_contig_seq.py  genome_dataset.py  genome_domain_dataset.py  genome_processing.py  masked_genome_dataset.py  sequence_mask.py  (+7 more)
tests/: .gitignore  test_genome_dataset.py  test_get_module_summary.py  test_get_torch_optimizer.py  test_masked_genome_dataset.py  test_merge_nni_config.py  test_plot_lr_scheduler.py  test_process_genomes.py
(+168 files in other folders)
