[tool.poetry]
name = "bioseq-learning"
version = "0.1.0"
description = "biological sequence learning with conserved domain"
authors = ["Xiaotian Duan <xduan7 at uchicago.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.77"
torch = "^1.6.0"
notebook = "^6.1.3"
pandas = "^1.1.0"
tabulate = "^0.8.7"
GPUtil = "^1.4.0"
joblib = "^0.16.0"
tqdm = "^4.48.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
