[tool.poetry]
name = "bioseq-learning"
version = "0.1.0"
description = "biological sequence learning with conserved domain"
authors = ["Xiaotian Duan <xduan7 at uchicago.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.6.0"
notebook = "^6.1.3"
tabulate = "^0.8.7"
GPUtil = "^1.4.0"
tqdm = "^4.48.2"
pytest = "^6.0.1"
biopython = "^1.78"
jupyterlab = "^2.2.8"
sklearn = "^0.0"
# note that 1.2.0 and earlier versions of pands will cause int32 overflown error during pivot_table
pandas = "^1.1.2"
seaborn = "^0.11.0"
umap-learn = "^0.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
