[tool.poetry]
name = "bioseq-learning"
version = "0.1.0"
description = "biological sequence learning with conserved domain"
authors = ["Xiaotian Duan <xduan7 at uchicago.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.6.0"
notebook = "^6.1.3"
tabulate = "^0.8.7"
GPUtil = "^1.4.0"
tqdm = "^4.48.2"
pytest = "^6.0.1"
biopython = "^1.78"
jupyterlab = "^2.2.8"
pandas = "^1.1.2"
seaborn = "^0.11.0"
umap-learn = "^0.4.6"
scikit-learn = "^0.23.2"
colorama = "^0.4.3"
nni = "^1.8"
dvc = "^1.8.2"
paramiko = "^2.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
